bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((aSmile==true && bSmile==true) || (aSmile==false && bSmile==true)){
  ^