bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if ((aSmile==true && bSmile==true) || (aSmile==false && bSmile==true)){
    return true
  }
  
}